24 oct (la)
      - add score.close() to plugin framework
19.oct (la)
      - fix #13183: [MusicXML] Wrong import of right barline
      - add dynamic and note velocity support in MusicXML export/import
17.oct (lv)
      - fix #13107: bww import: missing bagpipe doublings
9.oct (lv)
      - fix #12382: [MusicXML] Key Signature for 2 Staves
      - fix crash reading MusicXML file with different key signatures on the first staff and second staff
      - add MusicXML testfile for issue 12382 ("Key Signature for 2 Staves")
4.oct (ws)
      - fix regression from 30.sep change
30.sep (ws)
      - fix regression #4157: Natural alfter a tie across barline
29.sep (ws)
      - fix #1395: Accidental after a tied note
       (la)
      - fix #12085: Enharmonics not preserved when toggling concert pitch in part > 1 octave
20.sep (la)
      - fix pedal ending in midi export
        http://musescore.org/en/node/12642#comment-42743
6.sep (la)
      - fix 12218: shaped noteheads aren't shared
      - fix 12419: Ledger lines are still visible for invisible notes
3.sep (lv)
      - fix #12276: MusicXML import: sub-optimal handling of different duration measures
      (la)
      - fix #12394: Chordnames are not exported for grand staff
31.aug (lv)
      - added function to determine measure length, in preparation for fixing #12276
30.aug (lv)
      - refactored tick handling in MusicXML import, in preparation for fixing #12276
       (la)
      - fix #12161: Changing time signature should change autobeam properties
29.aug (la)
      - fix #12322: Exported parts close on command without a warning
21.aug (lv)
      - fix #11675: Crash opening MusicXML from Finale
        note: the attached file romance-1.zip still does not open correctly (probably a separate
        issue still to be investigated), but at least it does not crash due to the voice mapper
        anymore
18.aug (lv)
      - reworked MusicXML voice mapper
       (la)
      - fix bug on midi import
15.aug (la)